--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,10 @@
-icewm -- authors file.  2019-09-17
+icewm -- authors file.  2019-11-24
 
 Author: Bert Gijsbers <gijsbers@science.uva.nl>
+Author: Brian Bidulock <bidulock@openss7.org>
+Author: Kimmo Kujansuu <mrkujansuu@gmail.com>
+Author: Artem Polishchuk <tim77@users.noreply.github.com>
+Author: Alessio Adamo <alessio.adamo@gmail.com>
 Author: micrococo <micrococo@users.noreply.github.com>
 Author: Eduard Bloch <blade@debian.org>
 Author: jcsl <trcs@gmx.com>
@@ -14,7 +18,6 @@ Author: Yasuhiko Kamata <belphegor@belbel.or.jp>
 Author: David Medina <medipas@gmail.com>
 Author: Rodrigo Macedo <rmsolucoeseminformatic4@gmail.com>
 Author: Yi-Jyun Pan <pan93412@gmail.com>
-Author: Brian Bidulock <bidulock@openss7.org>
 Author: Olga Smirnova <mistresssilvara@hotmail.com>
 Author: Freek de Kruijf <freek@opensuse.org>
 Author: openSUSE Weblate <weblate-noreply@opensuse.org>
@@ -32,7 +35,6 @@ Author: wisememo <46960734+wisememo@users.noreply.github.com>
 Author: Franziska Weinberger <f.weinberger@gemino.de>
 Author: Jorge Gallegos Carrasco <jcarrascochih@gmail.com>
 Author: Patricia Pazos <pms.malaga@hermestrans.com>
-Author: Alessio Adamo <alessio.adamo@gmail.com>
 Author: nikoss <nikoss@users.noreply.github.com>
 Author: Dmitriy Khanzhin <dmitriy.khanzhin@gmail.com>
 Author: Dingzhong Chen <wsxy162@gmail.com>
